more stable version with cleaner code

--- a/analysis/trijunction.ipynb
+++ b/analysis/trijunction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "c2e1bd60-79e0-4203-a46a-e17a998b3e0a",
    "metadata": {},
    "outputs": [],
@@ -11,25 +11,35 @@
     "from shapely.geometry import Point, LineString, Polygon\n",
     "from shapely.ops import split, unary_union\n",
     "from itertools import product\n",
-    "from collections import OrderedDict"
+    "from collections import OrderedDict\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 236,
    "id": "a1cd2cec-1675-4dea-b04c-29ef1d6eab54",
    "metadata": {},
    "outputs": [],
    "source": [
     "def gate_coords(grid_spacing, L=41, gap=4, channel_width=11, angle=np.pi / 4):\n",
     "    \"\"\"Find the gate coordinates that defines the trijunction\n",
-    "\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
     "    L: Channel length\n",
-    "    gap: Gap between the gates\n",
+    "    gap: Gap between gates\n",
+    "    channel_width: width of the channel\n",
     "    angle: Angle the channel makes with the x-axis [in radians]\n",
     "\n",
-    "    Returns: Gates vertices and their order\n",
+    "    Returns: \n",
+    "    --------\n",
+    "    Gates vertices and their names\n",
+    "    boundary: coordinates of the four corners of the system envelope\n",
+    "    channel centers: Coordinates of the 2DEG at which nanowires can be connected\n",
+    "    \n",
     "    \"\"\"\n",
+    "\n",
     "\n",
     "    A = lambda x: np.array([[-np.cos(x), np.sin(x)], [np.sin(x), np.cos(x)]])\n",
     "\n",
@@ -50,24 +60,24 @@
     "        x = np.array(x.coords)\n",
     "        x[:, 0] += adjustment\n",
     "        return x\n",
-    "    \n",
-    "    distance_to_axis = (channel_width/2 + gap/2)\n",
-    "    \n",
+    "\n",
+    "    distance_to_axis = channel_width/2\n",
+    "\n",
     "    lcoords = shift(left, -distance_to_axis)\n",
+    "    lcoords_p = shift(left, distance_to_axis)\n",
     "    rcoords = shift(right, distance_to_axis)\n",
+    "    rcoords_p = shift(right, -distance_to_axis)\n",
     "    tcoords = shift(top, -channel_width/2)\n",
     "    tcoords_p = shift(top, channel_width/2)\n",
     "\n",
-    "    lr = np.vstack((right.coords, left.coords[::-1]))\n",
-    "    lr[:, 1] -= channel_width/2\n",
-    "    lr[0, 0] -= distance_to_axis\n",
-    "    lr[-1, 0] += distance_to_axis\n",
-    "    truncate = lr[lr[:, 1] < 0.0].copy()\n",
-    "    truncate = truncate @ np.array([[1, 0], [0, 0]])\n",
-    "    lr[lr[:, 1] < 0.0] = truncate\n",
+    "\n",
+    "    intersection = list(LineString(lcoords_p).intersection(LineString(rcoords_p)).coords)\n",
+    "\n",
+    "    lcoords_p[1] = intersection[0]\n",
+    "    rcoords_p[1] = intersection[0]\n",
     "\n",
     "    coords = np.vstack(\n",
-    "        (lcoords, tcoords, tcoords_p[::-1], rcoords[::-1], lr, lcoords[0])\n",
+    "        (lcoords, tcoords, tcoords_p[::-1], rcoords[::-1], rcoords_p, lcoords_p[::-1], lcoords[0])\n",
     "    )\n",
     "    trijunction = Polygon(coords)\n",
     "\n",
@@ -81,7 +91,7 @@
     "    rectangle = np.array([[xmin, ymin], [xmin, ymax], [xmax, ymax], [xmax, ymin]])\n",
     "\n",
     "    gates = Polygon(rectangle).difference(trijunction)\n",
-    "    \n",
+    "\n",
     "\n",
     "    gates = np.array(gates.geoms)\n",
     "    area = [gate.area for gate in gates]\n",
@@ -90,7 +100,7 @@
     "    coords = np.array(gates[1].exterior.coords)\n",
     "    y = np.unique(coords[:, 1])\n",
     "    assert len(y) == 3\n",
-    "    bottom_top_threshold = y[1]\n",
+    "    bottom_top_threshold = y[1] + gap/2\n",
     "\n",
     "    splitter = LineString(\n",
     "        [\n",
@@ -101,8 +111,8 @@
     "\n",
     "    top, bottom = list(gates[1].difference(splitter.buffer(gap/2)).geoms)\n",
     "\n",
-    "    left_1 = np.round(bottom.exterior.coords)\n",
-    "    top_1 = np.round(top.exterior.coords)\n",
+    "    left_1 = np.round(np.array(bottom.exterior.coords), 2)\n",
+    "    top_1 = np.round(np.array(top.exterior.coords), 2)\n",
     "    top_2 = top_1.copy() @ [[-1, 0], [0, 1]]\n",
     "    right_2 = left_1.copy() @ [[-1, 0], [0, 1]]\n",
     "\n",
@@ -113,15 +123,16 @@
     "    )\n",
     "\n",
     "    left_2, _ = list(gates[0].difference(splitter.buffer(gap/2)).geoms)\n",
-    "    \n",
-    "    left_2 = np.round(left_2.exterior.coords)\n",
+    "\n",
+    "    left_2 = np.round(np.array(left_2.exterior.coords), 2)\n",
     "    right_1 = left_2.copy() @ [[-1, 0], [0, 1]]\n",
-    "    \n",
+    "\n",
     "    gates_vertex = [\n",
     "        left_1, left_2, \n",
     "        right_1, right_2, \n",
     "        top_1, top_2\n",
     "    ]\n",
+    "\n",
     "\n",
     "    \n",
     "    gate_names = [\"left_1\", \"left_2\", \"right_1\", \"right_2\", \"top_1\", \"top_2\"]\n",
@@ -134,59 +145,74 @@
     "    channel_center = OrderedDict(left = np.hstack(tail), \n",
     "                          right = np.hstack(tail*-1), \n",
     "                          top = np.hstack([0, L+head[1]]))\n",
-    "    print(L, head)\n",
-    "    \n",
+    "\n",
     "    return gates_vertex, gate_names, boundaries, channel_center "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 231,
    "id": "45461fc7-d88b-4c6d-89d6-c854516ea4a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "L = 41\n",
-    "gap = 4\n",
-    "channel_width = 7\n",
-    "angle = np.pi/4"
+    "gap = 2\n",
+    "channel_width = 11\n",
+    "angle = np.pi/6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 232,
    "id": "6513d101-e9aa-4904-b1d4-433f0e21dc2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "41 [[ 0.  ]\n",
-      " [28.99]]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "gates_vertices, gates_name, boundary, centers = gate_coords(0.5, L, gap, channel_width, angle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 237,
+   "id": "f884b984-6255-4096-ae89-6a3178cace3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('left', array([-20.5,   0. ])),\n",
+       "             ('right', array([20.5, -0. ])),\n",
+       "             ('top', array([ 0.  , 76.51]))])"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "centers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
    "id": "4776e36a-8626-49db-a8cf-c8146c877f78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-36.8 -2.8000000000000003 73.6 75.6\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,70.0)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -23.0,0.0 L -2.0,23.0 L -2.0,0.0 L -23.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 2.0,23.0 L 23.0,0.0 L 2.0,0.0 L 2.0,23.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -34.0,0.0 L -34.0,27.0 L -8.0,27.0 L -34.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 34.0,27.0 L 34.0,0.0 L 8.0,27.0 L 34.0,27.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -34.0,70.0 L -4.0,70.0 L -4.0,31.0 L -34.0,31.0 L -34.0,70.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 4.0,31.0 L 4.0,70.0 L 34.0,70.0 L 34.0,31.0 L 4.0,31.0 z\" /></g></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-29.0604 -3.0604000000000005 58.1208 82.63080000000001\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,76.51)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.652616\" opacity=\"0.6\" d=\"M -15.0,0.0 L -1.0,24.25 L -1.0,0.0 L -15.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.652616\" opacity=\"0.6\" d=\"M 1.0,24.25 L 15.0,0.0 L 1.0,0.0 L 1.0,24.25 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.652616\" opacity=\"0.6\" d=\"M -26.0,0.0 L -26.0,35.51 L -5.5,35.51 L -26.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.652616\" opacity=\"0.6\" d=\"M 26.0,35.51 L 26.0,0.0 L 5.5,35.51 L 26.0,35.51 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.652616\" opacity=\"0.6\" d=\"M -26.0,76.51 L -5.5,76.51 L -5.5,37.51 L -26.0,37.51 L -26.0,76.51 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.652616\" opacity=\"0.6\" d=\"M 5.5,37.51 L 5.5,76.51 L 26.0,76.51 L 26.0,37.51 L 5.5,37.51 z\" /></g></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.multipolygon.MultiPolygon at 0x7fb5b49bed10>"
+       "<shapely.geometry.multipolygon.MultiPolygon at 0x7f0c4d897400>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,75 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "f85a51c7-8d79-4d2b-8dcf-65e081e829a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[-34.,   0.],\n",
-       "        [-34.,  27.],\n",
-       "        [ -8.,  27.],\n",
-       "        [-34.,   0.]]),\n",
-       " array([[ -2.,  23.],\n",
-       "        [ -2.,   0.],\n",
-       "        [-23.,   0.],\n",
-       "        [ -2.,  23.]]),\n",
-       " array([[ 2., 23.],\n",
-       "        [ 2.,  0.],\n",
-       "        [23.,  0.],\n",
-       "        [ 2., 23.]]),\n",
-       " array([[34.,  0.],\n",
-       "        [34., 27.],\n",
-       "        [ 8., 27.],\n",
-       "        [34.,  0.]]),\n",
-       " array([[ -4.,  70.],\n",
-       "        [ -4.,  31.],\n",
-       "        [-34.,  31.],\n",
-       "        [-34.,  70.],\n",
-       "        [ -4.,  70.]]),\n",
-       " array([[ 4., 70.],\n",
-       "        [ 4., 31.],\n",
-       "        [34., 31.],\n",
-       "        [34., 70.],\n",
-       "        [ 4., 70.]])]"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gates_vertices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "e37524bc-2aaf-4f83-9fd0-39414559de98",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([('xmin', -34.0), ('xmax', 34.0), ('ymin', 0.0), ('ymax', 70.0)])"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "boundary"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "27fe6ef8-43f1-4b6d-ba9f-bc5e2962a7f7",
+   "id": "8e504935-7918-4db5-a741-963e77c94c3a",
    "metadata": {},
    "outputs": [],
    "source": []
