phase optimization with new loss function

--- a/analysis/minimal_loss.ipynb
+++ b/analysis/minimal_loss.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "c495bfa6-176b-47fc-8fae-aba23c7ef444",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize, minimize_scalar"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "328a91b2-d8b2-4dfd-9ec7-48e577aa65ba",
    "metadata": {},
@@ -125,7 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "id": "e94100a9-6108-4314-8cf7-7996b0ef49d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [-3.0e-3, -3.0e-3, -7.0e-3, 3e-3]\n",
+    "voltages = parameters.voltage_dict(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f4fea80-47b2-4cae-8d44-0881fe9f7eec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "params.update(voltages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "0e40b643-3c6e-4ccd-b374-8ba5cad6ea95",
    "metadata": {},
    "outputs": [],
@@ -135,29 +168,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "89e14798-1204-4a78-b4e5-1a8b381fa386",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27.558322007808076"
+       "15.776435153682042"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "optimization.loss([0.0,1,1,1], *opt_args)"
+    "# loss to optimize voltages\n",
+    "# optimization.loss([0.0,1,1,1], *opt_args)\n",
+    "\n",
+    "# loss to optimize phases\n",
+    "optimization.loss(0.1, *opt_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "50fd2b30-8d4c-4e0b-8d96-e0783ba913f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 54s, sys: 26.8 s, total: 2min 21s\n",
+      "Wall time: 2min 20s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "sol = minimize_scalar(\n",
+    "    optimization.loss,\n",
+    "    0.2, \n",
+    "    args=opt_args, \n",
+    "    bounds=(0, 2), \n",
+    "    method=\"bounded\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "432c136b-e5dc-48f1-96b9-6c2895e41808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimal_phase = parameters.phase_pairs(opt_args[0], \n",
+    "                                              sol.x * np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2b667696-d5a4-479b-b2ec-9117f84e0a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'phi1': 0.9985266761097111, 'phi2': 0}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimal_phase"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50fd2b30-8d4c-4e0b-8d96-e0783ba913f4",
+   "id": "8d320d83-7d8d-44a2-b447-15dffd735b37",
    "metadata": {},
    "outputs": [],
    "source": []
