optimize necessary phases alone at user specified initial voltages

--- a/analysis/minimal_loss.ipynb
+++ b/analysis/minimal_loss.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "318e0951-21c5-496e-aa93-587394a5c978",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c495bfa6-176b-47fc-8fae-aba23c7ef444",
    "metadata": {},
    "outputs": [],
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "328a91b2-d8b2-4dfd-9ec7-48e577aa65ba",
    "metadata": {},
    "outputs": [],
@@ -67,21 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "bfb13a62-2ff2-4afa-a06b-ead696c58073",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "system = trijunction.Trijunction(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8fd49cdb-209b-4f74-a25b-9775442cc171",
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,17 +94,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:31<00:00,  2.41s/it]\n"
+      "100%|██████████| 13/13 [00:30<00:00,  2.33s/it]\n"
      ]
     }
    ],
    "source": [
-    "system.make_system()"
+    "system = trijunction.Trijunction(config, optimize_phase_pairs=['left-right'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "id": "61dc2944-9554-4f4d-9d7b-6b18bc06cfe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1620498115754614"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system.base_params['phi1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e2984aac-e1f9-4d20-9fad-f339af8275ba",
    "metadata": {},
    "outputs": [],
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1cf8473d-9dd4-4de5-bca1-10a6e044ba42",
    "metadata": {},
    "outputs": [],
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "aece4f2d-f679-4354-aefe-0eeb0df3a2b1",
    "metadata": {},
    "outputs": [],
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e94100a9-6108-4314-8cf7-7996b0ef49d5",
    "metadata": {},
    "outputs": [],
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6f4fea80-47b2-4cae-8d44-0881fe9f7eec",
    "metadata": {
     "tags": []
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0e40b643-3c6e-4ccd-b374-8ba5cad6ea95",
    "metadata": {},
    "outputs": [],
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "50fd2b30-8d4c-4e0b-8d96-e0783ba913f4",
    "metadata": {},
    "outputs": [
@@ -194,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 2s, sys: 14.8 s, total: 1min 17s\n",
-      "Wall time: 1min 16s\n"
+      "CPU times: user 45.3 s, sys: 11.1 s, total: 56.4 s\n",
+      "Wall time: 56.2 s\n"
      ]
     }
    ],
@@ -213,17 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b79c03f7-3bee-4221-9ae0-5a10683797e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.3698777112505698"
+       "1.3698360208353362"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "432c136b-e5dc-48f1-96b9-6c2895e41808",
    "metadata": {},
    "outputs": [],
@@ -245,17 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "2b667696-d5a4-479b-b2ec-9117f84e0a1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'phi1': 4.30359775398119, 'phi2': 0}"
+       "{'phi1': 4.303466779678967, 'phi2': 0}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,9 +987,6 @@
    "execution_count": 29,
    "id": "82481a2a-6ce4-49cd-9954-6c70370aa26c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1028,9 +1036,6 @@
    "execution_count": 30,
    "id": "93fc33c2-5b15-4896-95b7-9beb792e3f41",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1108,9 +1113,6 @@
    "execution_count": 374,
    "id": "dbea691d-2dd3-4f76-b2f3-054903cb48c0",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1142,8 +1144,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "tags": []
    },
